# atom-simulation

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
shaders/: particle.frag  particle.vert
src/: main.cpp
src/app/: Application.cpp  Application.h
src/core/math/: SpecialFunctions.cpp  SpecialFunctions.h  SphericalCoords.cpp  SphericalCoords.h
src/core/physics/: HydrogenOrbital.cpp  HydrogenOrbital.h  ISampler.h  QuantumNumbers.h
src/core/sampling/: CDFSampler.cpp  CDFSampler.h  RejectionSampler.cpp  RejectionSampler.h
src/factory/: IOrbitalFactory.h  OrbitalFactory.cpp  OrbitalFactory.h
src/rendering/: Camera.cpp  Camera.h  OrbitalRenderer.cpp  OrbitalRenderer.h  ParticleBuffer.cpp  ParticleBuffer.h  Shader.cpp  Shader.h
src/simulation/: ISimulationObserver.h  OrbitalSimulation.cpp  OrbitalSimulation.h
src/ui/: OrbitalCommands.cpp  OrbitalCommands.h
